--- a/mystyle.css
+++ b/mystyle.css
@@ -1,22 +1,19 @@
-#negrita{
-	font-weight:bold;
+
+#negrita {
+    font-weight: bold;
 }
 
 div.view {
-	height: 100vh;
-	display: none;
-}
-div#tmp {
     height: 100vh;
-
+    /*display: none;*/
 }
 
-.wrapperImage{
+.wrapperImage {
     height: 100px;
     margin: 10px;
 }
 
-.gallery_images{
+.gallery_images {
     max-width: 200px;
     max-height: 100px;
     margin: 1% 2% 1% 2%;
@@ -37,22 +34,11 @@ div#tmp {
     z-index: 10;
 }
 
-.imageBlock{
-
- /*   position: fixed;
-    height: 100vh;
-    width: 100vh;
-    top:0;
-    left:0;
-    z-index:20;/
-*/}
-
-.wrapperComments{
+.wrapperComments {
 
 }
 
-
-.big_image{
+.big_image {
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -61,34 +47,90 @@ div#tmp {
     max-width: 90vw;
     display: table-cell;
     vertical-align: middle;
-    text-align:center;
+    text-align: center;
 }
 
-.footer-button-left,right
 .footer-button-right {
         position: absolute;
         margin: 0;
         top: auto;
         bottom: 0.24em;
 }
+
 .footer-button-left {
         left: 0.4em;
-    float:left;
+    float: left;
 }
+
 .footer-button-right {
         right: 0.4em;
     float: right;
 }
-/*debería poder ajustarse al contenido*/
-/*#gallery_background{
-	width: 80%;
-	margin: 0% 27% 0% 7%;
 
-	/
-}*/
+#navselect {
+    display: none;
+}
 
-/*David Cabezuo Uni, [17.03.15 21:51]
-haz que los div sean inline-block
+.comment-list {
+    display: block;
+    margin-top: 10px;
+    border-bottom: 1px #BBB solid;
+}
 
-David Cabezuo Uni, [17.03.15 21:51]
-y ponles un ancho y alto fijos*/
+.comment-list:last-of-type {
+    border-bottom: none;
+}
+
+.comment-list .metadata {
+    font-weight: bold;
+}
+
+.comment-list .metadata .date {
+    font-size: 70%;
+}
+
+.comment-list .comment-body {
+    margin: 10px 0;
+    line-height: 1.75em;
+}
+
+@media only screen and (max-width: 699px) {
+    #navselect {
+        display: block !important;
+        padding: 0 10px;
+    }
+
+    #navselect h2 {
+        text-align: center;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
+    #navselect h2 a {
+        display: block;
+        position: relative;
+        width: auto;
+    }
+
+    #navselect div {
+        padding: 0;
+        margin: 0;
+    }
+
+    #navselect li {
+        display: block;
+        width: 100%;
+        list-style-type: none;
+    }
+
+    #navselect li a {
+        padding: 10px;
+        box-sizing: border-box;
+        width: 100%;
+    }
+
+    #navmenu {
+        display: none;
+    }
+}
